# media-upload

./: .env  pyproject.toml  requirements.txt
media_upload/: asgi.py  render.py  settings.py  throttle.py  urls.py  wsgi.py
media_upload/upload/: apps.py  redbook.py  urls.py
media_upload/utils/: base_views.py  comm.py
media_upload/xiaohongshu/: apps.py  models.py  serializers.py  urls.py  views.py
